Implement Validations to Module -> Turn

--- a/turn/Principal.html
+++ b/turn/Principal.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./css/celulares.css">
     <link rel="stylesheet" href="./css/laptops.css">
     <link rel="stylesheet" href="./css/turn.css">
+    <link rel="stylesheet" href="./css/styleChats.css">
+    <link rel="stylesheet" href="./css/chats.css">
+    <link rel="stylesheet" href="./css/customAlert.css">
 </head>
 
 <body>
@@ -70,6 +73,7 @@
 
             <main class="col-sm-12 col-md-12 col-lg-12 col-xl-12 principal">
                 <div class="tab-content">
+                    <!-- Modulo Reportes generales de la dirección-->
                     <div class="tab-pane fade show active" id="inicio">
                         <div class="container">
                             <div class="row shadow">
@@ -77,7 +81,7 @@
                                     <div class="direccion gradient-title">
                                     </div>
                                 </div>
-                                <div class="col d-flex justify-content-end logo">
+                                <div class="col d-flex justify-content-end logo mt-3">
                                     <img src="../img/horus.jpg" alt="Horus" class="img-fluid">
                                 </div>
                             </div>
@@ -98,11 +102,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="Bandeja">
-                        <div class="container">
+                    <!-- Modulo Mensajes de los asuntos recibidos a la dirección-->
+                    <div class="tab-pane fade containerChats" id="Bandeja">
 
-                        </div>
                     </div>
+                    <!-- Modulo Busqueda de los asuntos-->
                     <div class="tab-pane fade" id="Busqueda">
                         <div class="container-fluid mt-3">
                             <div class="row">
@@ -137,14 +141,14 @@
                             </div>
                         </div>
                     </div>
-
-
+                    <!-- Modulo Atención ciudadana-->
                     <div class="tab-pane fade" id="AC">
                         <div class="container">
-                            <h1>Acerca de</h1>
-                            <p>Información sobre tu empresa o proyecto.</p>
+                            <h1>Atencion Ciudadana</h1>
+                            <p>XD</p>
                         </div>
                     </div>
+                    <!-- Modulo Turnado de los asuntos-->
                     <div class="tab-pane fade" id="HORUS">
                         <div class="container">
                             <div class="row shadow">
@@ -181,10 +185,11 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Modulo Historial de los asuntos-->
                     <div class="tab-pane fade" id="Historial">
                         <div class="container-fluid">
-                            <h1>Contacto</h1>
-                            <p>Formulario de contacto o información de contacto.</p>
+                            <h1>Historial</h1>
+                            <p>Historial de chats.</p>
                         </div>
                     </div>
                 </div>
