--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <h2>Seguridad Pública</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Contraloría Municipal</h2>
+                                <h2>Consejería Jurídica</h2>
                             </li>
                         </ul>
                     </div>
@@ -64,13 +64,13 @@
                         </h1>
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Gobierno Digital</h2>
-                            </li>
-                            <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2>Desarrollo Social</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2>Obras Públicas</h2>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>IMCUFIDEM</h2>
                             </li>
                         </ul>
                     </div>
