Set Modulo -> Bandeja de Entrada, **Mensajes**, without -> Replica

--- a/turn/Principal.html
+++ b/turn/Principal.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/styleChats.css">
     <link rel="stylesheet" href="./css/chats.css">
     <link rel="stylesheet" href="./css/customAlert.css">
+    <link rel="stylesheet" href="./css/stylePdf.css">
 </head>
 
 <body>
@@ -40,14 +41,14 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" data-bs-toggle="tab" href="#Busqueda">
-                                <img src="../img/buscar.png" alt="Busqueda"><span class="nav-link-text">Busqueda</span>
+                            <a class="nav-link" data-bs-toggle="tab" href="#BS">
+                                <img src="../img/bs.png" alt="Bandeja de Salida"><span class="nav-link-text">Mensajes
+                                    Enviados</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" data-bs-toggle="tab" href="#AC">
-                                <img src="../img/atc.png" alt="Atención Ciudadana"><span class="nav-link-text">Atención
-                                    Ciudadana</span>
+                            <a class="nav-link" data-bs-toggle="tab" href="#Busqueda">
+                                <img src="../img/buscar.png" alt="Busqueda"><span class="nav-link-text">Busqueda</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -106,6 +107,13 @@
                     <div class="tab-pane fade containerChats" id="Bandeja">
 
                     </div>
+                    <!-- Modulo Atención ciudadana-->
+                    <div class="tab-pane fade" id="BS">
+                        <div class="container">
+                            <h1>Bandeja de salida</h1>
+                            <p>XD</p>
+                        </div>
+                    </div>
                     <!-- Modulo Busqueda de los asuntos-->
                     <div class="tab-pane fade" id="Busqueda">
                         <div class="container-fluid mt-3">
@@ -139,13 +147,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <!-- Modulo Atención ciudadana-->
-                    <div class="tab-pane fade" id="AC">
-                        <div class="container">
-                            <h1>Atencion Ciudadana</h1>
-                            <p>XD</p>
                         </div>
                     </div>
                     <!-- Modulo Turnado de los asuntos-->
