Set Arquitecture view -> President

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presidencia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./president/css/stylesheet.css">
 </head>
 
 <body class="bg-body-secondary">
@@ -150,10 +150,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Tu script personalizado -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="./js/GraficaBarras.js"></script>
-    <script src="./js/GraficaDona.js"></script>
-    <script src="./js/GraficasDependencias.js"></script>
-    <script src="./js/Hipervinculos.js"></script>
+    <script src="./president/js/GraficaBarras.js"></script>
+    <script src="./president/js/GraficaDona.js"></script>
+    <script src="./president/js/GraficasDependencias.js"></script>
+    <script src="./president/js/Hipervinculos.js"></script>
     <!--<script src="./js/Funcionalidad.js"></script>-->
 </body>
 
