--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                                 <h2>Obras Públicas</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>IMCUFIDEM</h2>
+                                <h2>Igualdad de Genero</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Desarrollo Social</h2>
+                                <h2>Desarrollo Económico Turístico y Artesanal</h2>
                             </li>
                         </ul>
                     </div>
