--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <h2>Obras Públicas</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Comuncación Social</h2>
+                                <h2>Igualdad de Genero</h2>
                             </li>
                         </ul>
                     </div>
